<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/shrine_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteBlogActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_marginBottom="@dimen/view8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/write_blog_menu"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
            app:titleTextAppearance="@style/TextAppearance.App.Button"
            android:theme="@style/Theme.MaterialComponents.ToolbarPink"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:textColor="@color/shrine_3"
        android:padding="@dimen/view12dp"
        android:text="@string/title"
        android:textSize="@dimen/text18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/titleEditText"
        android:textSize="@dimen/text14sp"
        android:padding="@dimen/view12dp"
        android:hint="@string/please_write"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view88dp"
        android:maxLength="100"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <TextView
        android:textColor="@color/shrine_3"
        android:padding="@dimen/view12dp"
        android:text="@string/description"
        android:textSize="@dimen/text18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/descriptionEditText"
        android:textSize="@dimen/text14sp"
        android:padding="@dimen/view12dp"
        android:maxLength="350"
        android:hint="@string/please_write"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:theme="@style/Theme.MaterialComponents.FloatingButtonPink"
        android:id="@+id/floatingActionButtonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/view12dp"
        app:srcCompat="@drawable/save"/>
</RelativeLayout>