<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shrine_1"
    tools:context=".MainBlogActivity">
    <LinearLayout
        android:layout_above="@id/linearChat"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBarMainBlog"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/tool_blog"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
                app:menu="@menu/toolbar_blog_menu"
                app:titleTextAppearance="@style/TextAppearance.App.Button"
                android:theme="@style/Theme.MaterialComponents.ToolbarPink"
                />
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:layout_marginTop="@dimen/view8dp"
                    android:background="@color/colorWhiteGrey"
                    android:layout_marginBottom="@dimen/view8dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">
                    <TextView
                        android:id="@+id/topicText"
                        android:textColor="@color/shrine_3"
                        android:layout_margin="@dimen/view8dp"
                        android:layout_gravity="center|start"
                        android:maxLines="1"
                        android:textSize="@dimen/text14sp"
                        android:text="@string/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:background="@color/colorWhiteGrey"
                    android:layout_margin="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="214dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                        android:layout_margin="@dimen/view8dp"
                        android:id="@+id/bodyBlog"
                        android:textSize="@dimen/text14sp"
                        android:text="@string/please_write"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                        <LinearLayout
                            android:layout_marginEnd="@dimen/view8dp"
                            android:padding="@dimen/view4dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:background="@drawable/cornor_oval"
                                android:scaleType="centerCrop"
                                android:id="@+id/imageBlogger"
                                android:padding="@dimen/view4dp"
                                android:layout_width="@dimen/view40dp"
                                android:layout_height="@dimen/view40dp"/>
                            <LinearLayout
                                android:layout_marginStart="@dimen/view4dp"
                                android:layout_marginTop="@dimen/view4dp"
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:textColor="@color/shrine_3"
                                    android:text="@string/author_message"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/text12sp"/>
                                <TextView
                                    android:id="@+id/timeBlogPosted"
                                    android:text="@string/time_holder"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/text8sp"/>
                            </LinearLayout>
                        </LinearLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerComment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearChat"
        android:paddingTop="6dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="6dp"
        android:background="@color/shrine_1"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.anonymouschat.AnonymousandroidApp.Utils.ClearFocusEditText
            android:hint="@string/please_write"
            android:id="@+id/textSendInput"
            android:layout_marginStart="@dimen/view4dp"
            android:layout_marginEnd="@dimen/view4dp"
            android:textSize="@dimen/text14sp"
            android:background="@drawable/rounded_chat"
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:layout_width="0dp" />
        <Button
            android:id="@+id/btnSendMessage"
            android:layout_width="@dimen/view24dp"
            android:layout_height="@dimen/view24dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/view4dp"
            android:background="@drawable/ic_baseline_send_24"
            android:backgroundTint="@color/darkGrey" />
    </LinearLayout>
</RelativeLayout>